syntax = "proto3"; //声明版本

package UserProto;//声明代码所在的包

//定义下面的选项，表示生成service服务类和rpc方法描述，默认不生成
option cc_generic_services = true;


//=========================================消息组件=====================================================



enum STATE{
    ONLINE = 0;
    OFFLINE = 1;
}
message User{
    int32 id = 1;
    bytes name = 2;
    bytes password = 3;
    STATE state = 4;
}

message FriendList
{
    repeated User friend = 1;
}

enum ROLE{
    CREATOR = 0;
    NORMAL = 1;
}

message GroupUser
{
    int32 id = 1;
    bytes name = 2;
    bytes password = 3;
    STATE state = 4;
    ROLE role = 5;
}

message Group
{
    int32 id = 1;
    bytes name = 2;
    bytes desc = 3;
    repeated GroupUser users = 4;

}

message GroupList
{
    repeated Group group = 1;
}

message ChatMessage
{
    bytes chattime = 1;
    int32 userid = 2;
    bytes username = 3;
    int32 groupid = 4;
    bytes groupname = 5;
    bytes msg = 6;
    int32 msgtype = 7;
}

message RequestResult
{
    bool success = 1;
    int32 errid = 2;
    bytes errmsg = 3;
}

//=====================================================================================================



//=========================================登录模块=====================================================
// 登录请求
message LoginRequest
{
    int32 userid = 1;
    bytes password = 2;
}

message LoginResponse
{
    RequestResult result = 1;
    int32 userid = 2;
    bytes username = 3;
    FriendList friendlist = 4;
    GroupList grouplist = 5;
    repeated  ChatMessage  offlinemsglist= 6;
}

message LoginoutRequest
{
    int32 userid = 1;
}

message LoginoutResponse
{
    RequestResult result = 1;   
}

message RegisterRequest
{
    bytes username = 1;
    bytes password = 2;
}

message RegisterResponse
{
    RequestResult result = 1;
    int32 userid = 2;  
}

service UserServiceRpc
{
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc Loginout(LoginoutRequest) returns(LoginoutResponse);
    rpc Register(RegisterRequest) returns(RegisterResponse);
}
//==========================================================================================================

